# grp_meeting

./: CHANGELOG.md  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yaml  release-please.yaml
grp_meeting/: add.py
