[tool.poetry]
name = "grp_meeting"
version = "1.0.1"
description = "Group meeting"
authors = ["Leandro Lima <leandro@ebi.ac.uk>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/leoisl/grp_meeting"
repository = "https://github.com/leoisl/grp_meeting"
packages = [{include = "grp_meeting"}]
keywords = ["Group", "Meeting"]

[tool.poetry.scripts]
grp_meeting = 'grp_meeting.add:main'

[tool.poetry.dependencies]
python = ">=3.9,<3.13"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"